*(November 19th, 2008)*

* add exception handling to watcher, reporter, beanstalk message queue
* force the node startup to run in production so it sends hoptoad messages
* sleep and retry if we get an unable to connect to beanstalkd error

*(November 17th, 2008)*

* Add Hoptoad Notifier for exception handling.
* Update reporter to check for stuck chunks every minute
* Reporter sleeps for 1 second if there is no message
* run the cleanup script by default after install

*(November 14th, 2008)*

* Change to use beanstalkd queue

*(November 13th, 2008)*

* Add priority to jobs (for new queue)
* Refactor MessageQueues to allow for easier switching

*(November 12th, 2008)*

* Remove apache web server and replace with thin
* Fix keypair launch bug

*(November 11th, 2008)*

* Add beanstalkd queue for move away from SQS
* Add spectra count per chunk to jobs to allow smaller chunks for difficult searches
